Add a list of ships that will be outputted to the user. Each ship on the list is clickable and will be used for the placement of ships on the grid.

--- a/views/index.jade
+++ b/views/index.jade
@@ -25,5 +25,6 @@ html
 				- }
 		div#info-section
 			div#clicked
+			div#shipList
 		script(src="http://code.jquery.com/jquery-1.11.2.min.js")
 		script(src="javascripts/app.js")
