--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,8 +36,24 @@ td:hover{
 	margin: 0 auto 0 auto;
 }
 
+#shipList{
+	text-align: center;
+}
+
 .activeShip{
-	color: red;
+	color: white;
+	font-weight: bold;
+	background-color: blue;
+}
+
+ul{
+	list-style: none;
+}
+
+li.ship{
+	border: 1px solid black;
+	border-radius: 5px;
+	margin: 5px;
 }
 
 li.ship:hover{
