Add some code (unfinished) to highlight which squares the ship will be placed on.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,7 +16,7 @@ td{
 }
 
 td:hover{
-	background-color: cornflowerblue;
+	/*background-color: cornflowerblue;*/
 	cursor: pointer;
 }
 
@@ -58,4 +58,8 @@ li.ship{
 
 li.ship:hover{
 	cursor: pointer;
+}
+
+.placementCell{
+	background-color: cornflowerblue;
 }
