--- a/views/index.jade
+++ b/views/index.jade
@@ -29,5 +29,6 @@ html
 		div#info-section
 			div#clicked
 			div#shipList
+			div#readyDiv
 		script(src="http://code.jquery.com/jquery-1.11.2.min.js")
 		script(src="javascripts/app.js")
