Make cursor highlight cells when it hovers over them once the user clicks a ship button.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -58,6 +58,10 @@ button.shipBtn:hover:not([disabled]){
 	background-color: blue;
 }
 
+.hoverPlacement{
+	background-color: red;
+}
+
 li.ship{
 	border: 1px solid black;
 	border-radius: 5px;
