Add "activeButton" class to buttons that are clicked and "disabledButton" class to buttons that are disabled. Add some styling to active and disabled buttons to help distinguish between the two.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -58,6 +58,18 @@ button.shipBtn:hover:not([disabled]){
 	background-color: blue;
 }
 
+button.activeButton{
+	color: white;
+	font-weight: bold;
+	background-color: blue;
+}
+
+button.disabledButton{
+	color: black;
+	font-weight: bold;
+	background-color: gray;
+}
+
 .hoverPlacement{
 	background-color: red;
 }
