Add classes to the buttons to indicate whether or not they are "alive" (this is used for styling).

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -58,7 +58,13 @@ button.shipBtn:hover:not([disabled]){
 	background-color: blue;
 }
 
-button.activeButton{
+button.shipBtn:not([disabled]){
+	color: black;
+	font-weight: bold;
+	background-color: green;
+}
+
+button.activeButton:not([disabled]){
 	color: white;
 	font-weight: bold;
 	background-color: blue;
