Added paragraphs to ship list indicating to player the ship button they chose and the number of pegs that ship has left to place. Added some styling for debugging purposes. Refactored some code to button listener for ship buttons: -Check which ship was selected first and then listen to cell placements.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -37,7 +37,9 @@ td:hover{
 }
 
 #shipList{
+	border: 1px solid black;
 	text-align: center;
+	padding: 10px;
 }
 
 .activeShip{
@@ -92,6 +94,10 @@ li.ship:hover{
 
 .placementCell{
 	background-color: cornflowerblue;
+}
+
+.instructions{
+	font-weight: bold;
 }
 
 .played{
