--- a/views/index.jade
+++ b/views/index.jade
@@ -28,5 +28,7 @@ block content
 		div#clicked
 		div#shipList
 		div#readyDiv
+			form#playForm(method="get", action="/play", name="playForm")
+
 	script(src="http://code.jquery.com/jquery-1.11.2.min.js")
 	script(src="javascripts/app.js")
