@app.js: Socket.io has been added to this file. This adds player to "lobby" @server.js: Added a counter, to see how many players are logged in. @index.jade: Removed the repeated script lines. Only has app.js in here. @layout.jade: Added scripts for jQuery and socketIO here. @play.jade: Removed the repeated script lines. Only has game.js in here.

--- a/views/index.jade
+++ b/views/index.jade
@@ -30,5 +30,5 @@ block content
 		div#readyDiv
 			form#playForm(method="get", action="/play", name="playForm")
 
-	script(src="http://code.jquery.com/jquery-1.11.2.min.js")
+block pageSpecificScripts	
 	script(src="javascripts/app.js")
