--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,3 +11,7 @@ html
 		//-Ignore favicon requests: http://stackoverflow.com/questions/1321878/how-to-prevent-favicon-ico-requests
 	body
 		block content
+
+		script(src="http://code.jquery.com/jquery-1.11.2.min.js")
+		script(src="/socket.io/socket.io.js")
+		block pageSpecificScripts
