--- a/views/play.jade
+++ b/views/play.jade
@@ -52,6 +52,6 @@ block content
 			p#player-ship-stats Your Ships Left: 
 			p#enemy-ship-stats Enemy Ships Left: 
 			p#prev-move Last Move: 
-	script(src="/socket.io/socket.io.js")
-	script(src="http://code.jquery.com/jquery-1.11.2.min.js")
+
+block pageSpecificScripts
 	script(src="javascripts/game.js")
