--- a/views/index.jade
+++ b/views/index.jade
@@ -51,7 +51,7 @@ block content
 			div#clicked
 			div#shipList
 			div#readyDiv
-				form#playForm(method="get", action="/play", name="playForm")
+				<!--form#playForm(method="get", action="/play", name="playForm")-->
 	div.container
 		div#status-board
 			//-This board shows how many ships left on each side and the last move played.
