Application now can detect hits, and go up to the point that the attacker's turn ends. @style.css: made colors for the class hit and miss. @index.jade: Counter was incorrect for enemy side. Set k to 0 when making enemy.Board. @app.js: Now detects the hits done by attacker and updates whether or not they hit or missed their target.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -129,3 +129,11 @@ li.ship:hover{
 .played{
 	background-color: darkgray;
 }
+
+.hit{
+	background-color: blue;
+}
+
+.miss{
+	background-color: red;
+}
