--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,4 +14,6 @@ html
 
 		script(src="http://code.jquery.com/jquery-1.11.2.min.js")
 		script(src="/socket.io/socket.io.js")
+		script(src="javascripts/jquery.noty.packaged.min.js")
+		script(src="javascripts/themes/relax.js")
 		block pageSpecificScripts
