Fixed game bug that allowed same attack on already-attacked spot.

--- a/views/play.jade
+++ b/views/play.jade
@@ -49,6 +49,7 @@ block content
 	div.container
 		div#status-board
 			//-This board shows how many ships left on each side and the last move played.
+			p#turn Turn: N/A
 			p#player-ship-stats Your Ships Left: 
 			p#enemy-ship-stats Enemy Ships Left: 
 			p#prev-move Last Move: 
