Add in new animations for noty and disable player moves after a win is found.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,6 +7,7 @@ html
 		meta(charset="utf-8")
 		meta(name="author" content="Flippin' Tables")
 		link(rel="stylesheet", type="text/css", href="stylesheets/style.css")
+		link(rel="stylesheet", type="text/css", href="stylesheets/animate.css")
 		link(rel="icon", href="data:;base64,iVBORw0KGgo=")
 		//-Ignore favicon requests: http://stackoverflow.com/questions/1321878/how-to-prevent-favicon-ico-requests
 	body
