Finished login and registration, which redirects to gameboard when done. Still need to do error checking, logic checking, and refactoring/renaming files.

--- a/views/login.jade
+++ b/views/login.jade
@@ -7,6 +7,12 @@ block content
 	h1 Welcome to Flippin' Boats
 	p Please login to play the game
 	div#login-form
+	form.form-signin(method="POST", action="/login_verification", name="loginForm")
+		label(for="userName") Username:
+		input#userName(type="text", name="userName")
+		label(for="passWord") Password:
+		input#passWord(type="password", name="passWord")
+		input(type="submit", value="Submit")
 	a(href="/register") Click here to register for a new account.
 
 
