--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block title
 	title #{title}
 
 block content
-	h1 Place Your Ships
+	//-h1 Place Your Ships
 
 	- var k = 0;  //Used to give the unique counter to each cell.
 	- var letterArray = ["A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z"];
